--- a/ansible/deploy-kidsbank-webapp.yaml
+++ b/ansible/deploy-kidsbank-webapp.yaml
@@ -9,6 +9,6 @@
 
          - name: Copy jar file to home directory
            copy:
-              src: /var/www/html/kidsbank-spefinal/k8s-config/
-              dest: /home/agape02/
+              src: /var/www/html/kidsbank-spefinal/k8s-config
+              dest: /home/agape02
               mode: '0775'
