--- a/k8s-config/mysqldb-secret.yaml
+++ b/k8s-config/mysqldb-secret.yaml
@@ -4,7 +4,7 @@ metadata:
   name: mysqldb-secrets
 type: Opaque
 data:
-  ROOT_PASSWORD: test
-  DATABASE_NAME: test
-  USERNAME: agapelee
-  PASSWORD: agapelee
+  ROOT_PASSWORD: cm9vdA==  #root
+  DATABASE_NAME: dGVzdGRi  #testdb
+  USERNAME: YWdhcGVsZWU=   #agapelee
+  PASSWORD: MDgwOQ==       #0809
