--- a/k8s-config/test-mysql.yaml
+++ b/k8s-config/test-mysql.yaml
@@ -1,57 +1,56 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mysqldb-service
+  name: mysql
 spec:
   selector:
-    app: mysqldb
-    #tier: backend
+    app: webapp-sql
+    tier: backend
   ports:
   - protocol: "TCP"
     port: 3306
     targetPort: 3306
   clusterIP: None
 ---
-apiVersion: apps/v1 
+apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
 metadata:
-  name: mysqldb-deployment
+  name: sqldb
   labels:
-    app: mysqldb
+    app: webapp-sql
     tier: backend
 spec:
-  replicas: 1
   selector:
     matchLabels:
-      app: mysqldb
+      app: webapp-sql
       tier: backend
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app: mysqldb
+        app: webapp-sql
         tier: backend
     spec:
       containers:
       - image: mysql
         name: mysql
+        env:
+        - name: MYSQL_ROOT_PASSWORD
+          value: password
+        - name: MYSQL_DATABASE
+          value: chat
+        - name: MYSQL_USER
+          value: db_user
+        - name: MYSQL_PASSWORD
+          value: password
+        args: ["--default-authentication-plugin=mysql_native_password"]
         ports:
         - containerPort: 3306
         volumeMounts:
         - name: mysql-persistent-storage
           mountPath: /var/lib/mysql
-        env:
-        - name: MYSQL_ROOT_PASSWORD
-          value: root
-        - name: MYSQL_DATABASE
-          value: testdb
-        - name: MYSQL_USER
-          value: agapelee
-        - name: MYSQL_PASSWORD
-          value: '0809'
-        args: ["--default-authentication-plugin=mysql_native_password"]
       volumes:
       - name: mysql-persistent-storage
         persistentVolumeClaim:
-                claimName: mysqldb-pv-claim
+          claimName: mysqldb-pv-claim
