--- a/k8s-config/mysqldb-deployment.yaml
+++ b/k8s-config/mysqldb-deployment.yaml
@@ -1,57 +1,35 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: mysqldb-service
-spec:
-  selector:
-    app: mysqldb
-    #tier: backend
-  ports:
-  - protocol: "TCP"
-    port: 3306
-    targetPort: 3306
-  clusterIP: None
 ---
-apiVersion: apps/v1 
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mysqldb-deployment
-  labels:
-    app: mysqldb
-    tier: backend
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: mysqldb
-      tier: backend
+      component: mysql
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app: mysqldb
-        tier: backend
+        component: mysql
     spec:
-      containers:
-      - image: mysql
-        name: mysql
-        ports:
-        - containerPort: 3306
-        volumeMounts:
-        - name: mysql-persistent-storage
-          mountPath: /var/lib/mysql
-        env:
-        - name: MYSQL_ROOT_PASSWORD
-          value: root
-        - name: MYSQL_DATABASE
-          value: testdb
-        - name: MYSQL_USER
-          value: agapelee
-        - name: MYSQL_PASSWORD
-          value: '0809'
-        args: ["--default-authentication-plugin=mysql_native_password"]
       volumes:
-      - name: mysql-persistent-storage
-        persistentVolumeClaim:
-                claimName: mysqldb-pv-claim
+        - name: mysql-storage
+          persistentVolumeClaim:
+            claimName: mysqldb-persistent-volume-claim
+      containers:
+        - name: mysql
+          image: mysql:latest
+          ports:
+            - containerPort: 3306
+          volumeMounts:
+            - name: mysql-storage
+              mountPath: /var/lib/mysql
+          env:
+            - name: MYSQL_ROOT_PASSWORD
+              value: root
+            - name: MYSQL_DATABASE
+              value: testdb
+
