--- a/k8s-config/mysqldb-persistent-volume-claim.yaml
+++ b/k8s-config/mysqldb-persistent-volume-claim.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: mysqldb-pv-volume
+  name: mysqldb-persistent-volume
   labels:
     type: local
 spec:
@@ -16,24 +16,10 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mysqldb-pv-claim
+  name: mysqldb-persistent-volume-claim
 spec:
-  storageClassName: manual
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
       storage: 1Gi
-
-
-
-      #apiVersion: v1
-      #kind: PersistentVolumeClaim
-      #metadata:
-      #  name: mysqldb-pv-claim
-      #spec:
-      #  accessModes:
-      #    - ReadWriteOnce
-      #  resources:
-      #    requests:
-      #      storage: 1Gi
